# A-github-Knowledge-agent

./: .env.example  .gitignore  AGENTS.md  README.md  TESTING.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/profiles/: identity.md  interests.yaml  projects.yaml  sources.yaml
docs/: 使用手册.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: assets.ts  candidates.ts  client.ts  (+6 more)
omka/: __init__.py
omka/app/: AGENTS.md  main.py
omka_plan/: mvp_plan.md  omka_MVP_plan.md  omka_next_plan.md  omka_next_plan_feasibility_report.md
plan_/4.29/: 4.29.feishu_change_0.md  4.29_feishu_change_1.md  4.29_feishu_change_1_start.md
plan_/5.2/: omka_memory_recommendation_feishu_multimodal_upgrade_plan.md  omka_memory_recommendation_feishu_multimodal_upgrade_plan_start.md
plan_/5.3/: omka_search_quality_scheduler_feishu_upgrade_plan.md  omka_search_quality_scheduler_feishu_upgrade_plan_feasibility.md  omka_search_quality_scheduler_feishu_upgrade_plan_start.md  omka_search_quality_scheduler_feishu_upgrade_plan_testing.md
plan_/5.4/: 2026-05-04_daily_push_quality_upgrade_plan.md  omka_feishu_builtin_capabilities_plan.md
tests/: DEBUG_GUIDE.md  UPGRADE_TESTING_GUIDE.md  test_api.py  test_feishu_agent.py  test_feishu_capabilities.py  test_feishu_integration.py  test_github_quality_scoring.py  test_github_query_builder.py  test_github_search_task.py  test_phase3.py  test_phase4_6.py  test_upgrade_features.py  test_upgrade_features.sh
(+88 files in other folders)
