[project]
name = "oh-my-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.0",
    "croniter==6.2.2",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "lark-oapi>=1.5.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-multipart>=0.0.28",
    "pyyaml==6.0.2",
    "sqlalchemy==2.0.36",
    "sqlmodel==0.0.22",
    "uvicorn[standard]==0.32.0",
]
